@@ -1,6 +1,11 @@
 ChangeLog for django-globals
 ============================
 
+UNRELEASED
+----------
+
+* Add support for new Django `MIDDLEWARE` setting introduced in Django 1.10.
+
 0.2.1
 -----
 
